--- a/warm-nest-master/src/css/order.css
+++ b/warm-nest-master/src/css/order.css
@@ -44,7 +44,7 @@ h4{margin-left: 40px;margin-top:30px}
 /* 地址 */
 .address{width: 900px;height: 350px;margin: 40px 0 40px 100px}
 .address h4 {margin:0;padding: 0}
-.address h4 span{color: gray;}
+.address h4 span{color: #808080;}
 .aaa{margin-top: 15px;width: 100%;height: 25px;}
 
 .ipthuo{height: 20px;width: 200px}
