--- a/src/css/fenye.css
+++ b/src/css/fenye.css
@@ -52,12 +52,19 @@
 }
 
 .productSide h4{
+	width: 188px;
     height: 30px;
     padding: 0 0 0 10px;
     line-height: 30px;
     color: #808285;
     font-size: 12px;
     font-weight: 400;
+}
+
+.productSide h4 a {
+    color: #808285;
+    text-decoration: none;
+    margin-left: 0;
 }
 
 dl{
