--- a/src/css/fenye.css
+++ b/src/css/fenye.css
@@ -52,9 +52,9 @@
 }
 
 .productSide h4{
-	width: 188px;
     height: 30px;
     padding: 0 0 0 10px;
+    margin-left: 0px;
     line-height: 30px;
     color: #808285;
     font-size: 12px;
@@ -64,7 +64,6 @@
 .productSide h4 a {
     color: #808285;
     text-decoration: none;
-    margin-left: 0;
 }
 
 dl{
